unpackaged/main/default/objects/Engagement_Room_Block__c/Engagement_Room_Block__c.object-meta.xml
<CustomObject>
    <description>Room Block Survey for a specific Engagement.</description>
    <label>Engagement Room Block</label>
    <nameField>
        <label>Room Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Room Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>