unpackaged/main/default/objects/Engagement_Room_Block__c/fields/Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Id__c</fullName>
    <description>Engagement Room Blocks related to the Engagement.</description>
    <inlineHelpText>Engagement Room Blocks related to the Engagement.</inlineHelpText>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagement Room Blocks</relationshipLabel>
    <relationshipName>EngRoomBlocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>