unpackaged/main/default/objects/Engagement_Room_Block__c/fields/Room_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Deadline_Date__c</fullName>
    <description>Formula field created to display the Deadline Date from the related Engagement.</description>
    <formula>Engagement_Id__r.Room_Block_Deadline__c</formula>
    <inlineHelpText>Formula field created to display the Deadline Date from the related Engagement.</inlineHelpText>
    <label>Room Deadline Date</label>
    <type>Date</type>
</CustomField>