unpackaged/main/default/objects/Engagement_Room_Block__c/fields/Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Room_Rate__c</fullName>
    <description>A meeting specialist can see a tab where they will manage/work on room block survey information for that engagement. Add Room Block Survey Objects and Tab to display on the Engagement page.</description>
    <label>Room Rate</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>