unpackaged/main/default/objects/Engagement_Room_Block__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description>Room Type? King Size, Two Queens, Suite, etc...</description>
    <inlineHelpText>Room Type? King Size, Two Queens, Suite, etc...</inlineHelpText>
    <label>Room Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>